(PC-8292) Fix truncated venue name

--- a/src/components/pages/Home/Homepage.scss
+++ b/src/components/pages/Home/Homepage.scss
@@ -55,7 +55,6 @@
     .h-card-header-row {
       display: flex;
       flex-direction: row;
-      height: rem(18px);
       justify-content: space-between;
 
       .tertiary-link {
